[workspace]
members = [
    "lib",
    "examples/hello",
    "examples/list4-7",
    "examples/list4-9",
    "examples/list5-8",
    "examples/list5-9",
    "examples/list5-10",
    "examples/list5-13",
    "examples/list5-14",
    "examples/list5-15",
    "examples/list5-16",
    "examples/list6-1",
    "examples/list6-2",
    "examples/list6-3",
    "examples/list6-4",
    "examples/list6-5",
    "examples/list6-6",
]
