[workspace]
members = [
    "lib",
    "examples/hello",
    "examples/list4-7",
    "examples/list4-9",
    "examples/list5-8",
    "examples/list5-9",
    "examples/list5-10",
    "examples/list5-13",
    "examples/list5-14",
    "examples/list5-15",
    "examples/list5-16",
    "examples/list6-1",
    "examples/list6-2",
    "examples/list6-3",
    "examples/list6-4",
    "examples/list6-5",
    "examples/list6-6",
    "examples/list7-1",
    "examples/list7-21",
    "examples/list8-1",
    "examples/list8-10",
    "examples/list8-11",
    "examples/list8-22",
    "examples/list8-23",
    "examples/list8-25",
    "examples/list8-26",
    "examples/list9-4",
    "examples/list9-5",
    "examples/list9-6",
    "examples/list9-7",
    "examples/list9-8",
    "examples/list10-5",
    "examples/list10-6",
    "examples/list10-9",
]
