[workspace]
members = [
    "lib",
    "examples/hello",
    "examples/list4-7",
    "examples/list4-9",
    "examples/list5-8",
    "examples/list5-9",
    "examples/list5-10",
    "examples/list5-13",
    "examples/list5-14",
    "examples/list5-15",
    "examples/list5-16",
    "examples/list6-1",
    "examples/list6-2",
    "examples/list6-3",
    "examples/list6-4",
    "examples/list6-5",
    "examples/list6-6",
    "examples/list7-1",
    "examples/list7-21",
    "examples/list8-1",
    "examples/list8-10",
    "examples/list8-11",
    "examples/list8-22",
    "examples/list8-23",
    "examples/list8-25",
    "examples/list8-26",
    "examples/list9-4",
    "examples/list9-5",
    "examples/list9-6",
    "examples/list9-7",
    "examples/list9-8",
    "examples/list10-5",
    "examples/list10-6",
    "examples/list10-9",
    "examples/list10-13",
    "examples/list10-15",
    "examples/list10-16",
    "examples/list11-3",
    "examples/list11-6",
    "examples/list11-9",
    "examples/list11-12",
    "examples/list12-1",
    "examples/list12-5",
    "examples/list12-6",
    "examples/list12-7",
    "examples/list12-9",
    "examples/list12-10",
    "examples/list12-11",
    "examples/list12-12",
    "examples/list12-13",
    "examples/list12-15",
    "examples/list12-20",
    "examples/list13-1",
    "examples/list13-5",
    "examples/list13-9",
    "examples/list13-12",
    "examples/list13-13",
    "examples/list13-20",
    "examples/list13-24",
    "examples/list14-1",
    "examples/list14-3",
    "examples/list14-5",
    "examples/list15-1",
    "examples/list15-2",
    "examples/list15-7",
    "examples/list15-8",
    "examples/list15-10",
    "examples/list15-14",
    "examples/list15-17",
    "examples/list15-20",
    "examples/list15-22",
    "examples/list15-24",
    "examples/list15-25",
    "examples/list15-27",
    "examples/list16-1",
    "examples/list16-3",
    "examples/list16-8",
    "examples/list16-10",
    "examples/list16-12",
    "examples/list16-13",
    "examples/list16-14",
    "examples/list16-15",
    "examples/list17-6",
    "examples/list17-9",
    "examples/list17-11",
    "examples/list17-19",
]
