[package]
name = "list19-30"
version = "0.1.0"
authors = ["Meng <sunmeng90@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
list19_30_hello_macro = { path = "../list19-30_hello_macro" }
list19_30_hello_macro_derive  = { path = "../list19-30_hello_macro_derive" }